We now construct path based on a neighbourName in the constructor. Should make testing much simpler